--- a/migrations-tutorial/package.json
+++ b/migrations-tutorial/package.json
@@ -7,5 +7,8 @@
     "migrate": "db-migrate"
   },
   "author": "Arsene Kevin KOUOMEU",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "db-migrate-mysql": "^2.1.2"
+  }
 }
